config/otel-operator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-ingress
  namespace: spring-app
spec:
  rules:
#   modify hosts file for working
    - host: otel-agent.kuber
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: otel-agent-collector
                port:
                  number: 8889
